# python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/action-test/: action.yml
.github/workflows/: lint-test-sdk.yml  publish.yml  test-and-lint-sdk.yml
docs/: .buildinfo  Makefile  api.html  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: eppo_client.html  index.html
docs/_modules/eppo_client/: client.html  config.html
docsrc/: Makefile  api.rst  conf.py  index.rst
eppo_client/: __init__.py  assignment_logger.py  bandit.py  base_model.py  client.py  config.py  configuration.py  configuration_requestor.py  configuration_store.py  constants.py  eval.py  http_client.py  models.py  poller.py  read_write_lock.py  rules.py  shard.py  sharding.py  subject.py  types.py  validation.py  variation_type.py  version.py
example/: .env.dist  01_script.py  02_fastapi.py  03_bandit.py  README.md  main.py  requirements.txt
test/: bandit_test.py  cache_assignment_logger_test.py  client_bandit_test.py  client_no_poller_test.py  client_test.py  configuration_store_test.py  configuration_test.py  conftest.py  context_attributes_test.py  eval_test.py  example_test.py  initial_configuration_test.py  poller_test.py  rules_test.py  sharders_test.py
