[metadata]
name = eppo-server-sdk
version = file: VERSION.txt
author = Eppo
author_email = eppo-team@geteppo.com
description = Eppo SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eppo-exp/python-sdk
project_urls =
    Bug Tracker = https://github.com/Eppo-exp/python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = eppo_client
packages = find:
python_requires = >=3.6

[options.packages.find]
where = eppo_client