[metadata]
name = eppo-server-sdk
version = attr: eppo_client.version.__version__
author = Eppo
author_email = eppo-team@geteppo.com
description = Eppo SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eppo-exp/python-sdk
project_urls =
    Bug Tracker = https://github.com/Eppo-exp/python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = eppo_client
python_requires = >=3.6
include_package_data=True
install_requires =
    pydantic
    pydantic-settings
    requests
    cachetools
